{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 10,
  "lineage": "bd5bdb0e-d48f-c329-c610-e9b21f5e27e6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "team2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/networkSecurityGroups/team2-security-group",
            "location": "eastus",
            "name": "team2-security-group",
            "resource_group_name": "resource-group-team2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "main",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "name": "team2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.team2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "team2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/routeTables/team2-route-table",
            "location": "eastus",
            "name": "team2-route-table",
            "resource_group_name": "resource-group-team2",
            "route": [
              {
                "address_prefix": "10.0.1.0/24",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "name": "route2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "name": "route3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {
              "name": "team2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.team2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "team2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "87d689ac-4a71-4e77-816b-0324df992f02",
            "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/virtualNetworks/team2-network",
            "location": "eastus",
            "name": "team2-network",
            "resource_group_name": "resource-group-team2",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/virtualNetworks/team2-network/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/networkSecurityGroups/team2-security-group"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/virtualNetworks/team2-network/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/networkSecurityGroups/team2-security-group"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/virtualNetworks/team2-network/subnets/subnet3",
                "name": "subnet3",
                "security_group": "/subscriptions/6896efad-ddfe-4662-b811-ee6f2766976f/resourceGroups/resource-group-team2/providers/Microsoft.Network/networkSecurityGroups/team2-security-group"
              }
            ],
            "tags": {
              "name": "team2"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.team2",
            "azurerm_resource_group.team2"
          ]
        }
      ]
    }
  ]
}